--- a/paco/static/assets/main.scss
+++ b/paco/static/assets/main.scss
@@ -2,3 +2,4 @@ $primary: #3361AC;
 $dark: #0F2043;
 
 @import "node_modules/bootstrap/scss/bootstrap";
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css");
