--- a/paco/blueprints/auth/templates/login.html
+++ b/paco/blueprints/auth/templates/login.html
@@ -30,7 +30,7 @@
                     </div>
                 </div>
                 {{ form.submit(class="w-100 btn btn-lg btn-primary rounded-pill") }}
-                <p class="mt-3 text-center">You don't have an account? <a href="{{ url_for('signup') }}">Sign up here</a></p>
+                <p class="mt-3 text-center">You don't have an account? <a href="{{ url_for('auth.signup') }}">Sign up here</a></p>
             </form>
         </div>
     </div>
