--- a/paco/blueprints/delivery/templates/track.html
+++ b/paco/blueprints/delivery/templates/track.html
@@ -80,31 +80,31 @@
             </div>
             <h4>Tracking history</h4>
             <table class="table">
-                {% if delivery.get_status() >= 0 %}
+                {% if delivery.status >= 0 %}
                     <tr>
                         <td>{{ delivery.date_created.strftime("%d/%m/%Y %H:%M:%S") }}</td>
                         <td>Delivery confirmed by Paco.</td>
                     </tr>
                 {% endif %}
-                {% if delivery.get_status() >= 1 %}
+                {% if delivery.status >= 1 %}
                     <tr>
                         <td>{{ delivery.date_source_arrived.strftime("%d/%m/%Y %H:%M:%S") }}</td>
                         <td>Delivery arrived at the source locker.</td>
                     </tr>
                 {% endif %}
-                {% if delivery.get_status() >= 2 %}
+                {% if delivery.status >= 2 %}
                     <tr>
                         <td>{{ delivery.date_source_departed.strftime("%d/%m/%Y %H:%M:%S") }}</td>
                         <td>Delivery en route. Driver {{ delivery.get_driver().username }} is delivering your parcel </td>
                     </tr>
                 {% endif %}
-                {% if delivery.get_status() >= 3 %}
+                {% if delivery.status >= 3 %}
                     <tr>
                         <td>{{ delivery.date_destination_arrived.strftime("%d/%m/%Y %H:%M:%S") }}</td>
                         <td>Delivery arrived at the destination locker.</td>
                     </tr>
                 {% endif %}
-                {% if delivery.get_status() >= 4 %}
+                {% if delivery.status >= 4 %}
                     <tr>
                         <td>{{ delivery.date_destination_picked.strftime("%d/%m/%Y %H:%M:%S") }}</td>
                         <td>Delivery completed.</td>
